<resources>
    <string name="app_name">MileageTracker</string>
    <string name="lbl_username">UserName</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_signin">SignIn</string>
    <string name="lbl_new_user">new user ? click here</string>
    <string name="lbl_signup">SignUp</string>
    <string name="err_emptyfields">Fields Cannot Be Blank</string>
    <string name="lbl_retype_password">Re Type Password</string>
    <string name="lbl_mobile_no">Mobile No</string>
    <string name="err_pwd">Password Mismatch</string>
    <string name="lbl_register">Register</string>
    <string name="err_mobile">Invalid Mobile Number</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_otp">Enter OTP</string>
    <string name="err_response">Error Response</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
